Application state solution

--- a/fp_in_js/index.html
+++ b/fp_in_js/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <div id="root"></div>
-  <script src="render_method.js"></script>
+  <!-- <script src="render_method.js"></script> -->
+  <script src="application_state.js"></script>
 </body>
 
 </html>
